SPA-1408. Issues with scrolling on the Rooms tab when there are a lot of pinnables on Safari

--- a/src/app/admin/pass-config/pass-config.component.scss
+++ b/src/app/admin/pass-config/pass-config.component.scss
@@ -242,7 +242,6 @@
     //margin-right: 10%;
     margin-top: 30px;
 
-    display: flex;
     justify-content: center;
   }
 
